# pulumi-ai-aws-bedrock-workshop

./: .gitignore  .jekyll-metadata  .markdownlint-cli2.yaml  00-setup-and-orientation.md  01-hello-agent.md  01-your-first-agent.md  02-mcp-server-jwt-auth.md  02-your-first-agent.md  03-multi-agent-orchestration.md  04-full-stack-weather-agent.md  05-housekeeping.md  AGENTS.md  CLAUDE.md  Gemfile  LICENSE  Makefile  README.md  _config.yml  glossary.md  index.md
.devcontainer/: Dockerfile  devcontainer.json
01-solution/: README.md
01-solution/python/: Pulumi.dev.yaml  __main__.py  buildspec.yml  pyproject.toml  test_basic_agent.py
01-solution/python/lambda/build-trigger/: index.py
01-solution/typescript/: index.ts  package-lock.json  package.json
02-solution/python/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
02-solution/typescript/: Pulumi.dev.yaml  Pulumi.yaml  build.sh  buildspec.yml  index.ts  package-lock.json  package.json  test_basic_agent.py
03-solution/python/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  buildspec-specialist.yml  pyproject.toml  test_multi_agent.py
03-solution/python/agent-orchestrator-code/: agent.py
03-solution/typescript/: Pulumi.yaml  (+5 more)
04-solution/python/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml  test_weather_agent.py
04-solution/python/agent-code/: weather_agent.py
_includes/: lang-tabs.html  mermaid.html
_layouts/: default.html
esc/: workshop-aws-env.yaml
instructor/: Pulumi.dev.yaml  Pulumi.yaml  README.md  index.ts  package-lock.json  package.json
slides/: .gitignore  .npmrc  AGENTS.md  package-lock.json  package.json  slides.md  style.css
(+13 files in other folders)
