[project]
name = "basic-runtime"
version = "0.1.0"
description = "Basic AgentCore Runtime - Pulumi Python"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.0.0",
    "pulumi-aws>=7.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
