[project]
name = "multi-agent-runtime"
version = "0.1.0"
description = "Multi-agent runtime with orchestrator and specialist agents - Pulumi Python"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.0.0",
    "pulumi-aws>=7.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
