[project]
name = "end-to-end-weather-agent"
version = "0.1.0"
description = "End-to-End Weather Agent - Pulumi Python"
requires-python = ">=3.11"
dependencies = [
    "pulumi>=3.0.0",
    "pulumi-aws>=7.23.0",
    "boto3>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
